--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gulp-autoprefixer": "^8.0.0",
     "gulp-clean-css": "^4.3.0",
     "gulp-cli": "^2.3.0",
+    "gulp-imagemin": "^8.0.0",
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^5.1.0",
     "sass": "^1.52.1"
@@ -32,5 +33,6 @@
     "maintained node versions"
   ],
   "dependencies": {
+    "gulp-htmlmin": "^5.0.1"
   }
 }
